Gameboard views changed to react and mostly working aside from a slight rendering issue. Won't spend too much time on this as we are using canvas ATM and are likely to change this.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -24,22 +24,22 @@
       padding: 60px
       border: 1px solid green
 
-      .nodes, .links, .resemblences
-        position: absolute
+    .board__nodes, .links, .resemblences
+      position: absolute
 
-      .node
-        width: 60px
-        height: 60px
-        margin: -30px
-        background: #c77e1a
-        border-radius: 15%
+    .board__node
+      width: 60px
+      height: 60px
+      margin: -30px
+      background: #c77e1a
+      border-radius: 15%
 
-      .links
-        border: 1px solid lightgreen
+    .board__links
+      border: 1px solid lightgreen
 
-        canvas
-          width: 100%
-          height: 100%
+      canvas
+        width: 100%
+        height: 100%
 
 @import forms
 @import common
